--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             <div class="hero-image">
                 <div class="profile-img-placeholder">
-                     <img src="images/profile.jpg" alt="Profile Photo" class="profile-img">
+                     <img src="images/profile.JPG" alt="Profile Photo" class="profile-img">
                 </div>
             </div>
         </div>
